# hpc

./: .gitignore
lab1-intro/: .gitignore
lab1-intro/code/: .clang-format
lab1-intro/code/src/: lab01  main.c  sobel.c
lab1-intro/report/: benchmark.csv  benchmark.py  report.md  results.eps
lab2-profiling/code/src/: image.c  lab01  main.c  sobel.c
lab2-profiling/outputs/: perfctr-array-final.txt  perfctr-array-precompute.txt  perfctr-array-sobel.txt  perfctr-array.txt  perfctr-chained-final.txt  perfctr-chained-precompute.txt  perfctr-chained-sobel.txt  perfctr-chained.txt
lab2-profiling/report/: benchmark.csv  report.md
lab2-profiling/report/figures/: results-after-precompute.eps  results-after-sobel.eps  results-baseline.eps  results-final.eps
lab2-profiling/script/: input.txt  roofline_gen.py
lab3-compiler-optimizations/report/: report.md
lab4-simd/code/: CMakeLists.txt
lab4-simd/code/include/: sobel.h
lab4-simd/code/src/: k-means.c  main_sobel.c  sobel.c
lab4-simd/report/: benchmark.py  benchmark_seg.py  benchmark_segmentation.csv  report.md
lab4-simd/report/figures/: results_edge_detection_0.eps  results_edge_detection_1.eps  results_segmentation_0.eps  results_segmentation_1.eps  results_segmentation_2.eps  results_segmentation_3.eps
lab5-profiling2/report/: my.theme  report.md
lab6-power-consumption/code/: CMakeLists.txt  perf.sh  perf_manager.sh
lab6-power-consumption/code/lib/perfmanager/: perf_manager.h
lab6-power-consumption/code/segmentation/src/: k-means.c
lab6-power-consumption/code/segmentation_perf/src/: k-means.c
lab6-power-consumption/code/segmentation_perf_simd/src/: k-means.c
lab6-power-consumption/code/segmentation_powercap/src/: k-means.c
lab6-power-consumption/code/segmentation_powercap_simd/src/: k-means.c
lab6-power-consumption/code/test_power_consumption/src/: sum.c
lab6-power-consumption/report/: report.md
lab7-parallelism/code/: CMakeLists.txt  profile.coz  run_profiler.sh
lab7-parallelism/code/src/: main.c
lab7-parallelism/report/: report.md
project-bpftrace/code/: CMakeLists.txt  run_tests.sh
project-bpftrace/code/bpftrace/: hist.bt  load.bt
project-bpftrace/docs/: report.md
